@@ -940,12 +940,19 @@ attr(X, "contrasts") <- Xatt$contrasts
 
 Finish the setup.  If someone includes an init statement or offset, make sure
 that it does not lead to instant code failure due to overflow/underflow.
+The mean offset is added back to the linear predictors at the end, to maintain
+consistency with predict.coxph(fit, newdata= originaldata)
 <<coxph-setup>>=
 offset <- model.offset(mf)
-if (is.null(offset) || all(offset==0)) offset <- rep(0., nrow(mf))
-else if (any(!is.finite(offset) | !is.finite(exp(offset)))) 
+if (is.null(offset) || all(offset==0)) {
+    offset <- rep(0., nrow(mf))
+    meanoffset <- 0
+} else if (any(!is.finite(offset) | !is.finite(exp(offset)))) 
     stop("offsets must lead to a finite risk score")
-else offset <- offset - mean(offset)  # this can help stability of exp()
+else {
+    meanoffset <- mean(offset)
+    offset <- offset - meanoffset  # this can help stability of exp()
+}
     
 weights <- model.weights(mf)
 if (!is.null(weights) && any(!is.finite(weights)))
@@ -1208,7 +1215,8 @@ names(fit$means) <- names(fit$coefficients)
 fit$formula <- formula(Terms)
 if (length(xlevels) >0) fit$xlevels <- xlevels
 fit$contrasts <- contr.save
-if (any(offset !=0)) fit$offset <- offset
+if (meanoffset !=0) fit$linear.predictors <- fit$linear.predictors + meanoffset
+if (x & any(offset !=0)) fit$offset <- offset
 
 fit$call <- Call
 fit
@@ -1281,7 +1289,8 @@ Error: ndata not found
 The genesis of this problem is hard to unearth, but has to do with non standard
 evaluation rules used by model.frame.default.  In essence it pays attention to 
 the environment of the formula, but the enclos argument of eval appears to be
-ignored.  I've not yet found a solution.
+ignored.  I've not yet found a solution, other than to tell users to set x=TRUE
+when calling coxph inside a subroutine.
 
 <<model.matrix.coxph>>=
 model.frame.coxph <- function(formula, ...) {
